# LangGraph-js-study

./: .gitignore  README.md
.devcontainer/: devcontainer.json
01.LangChain/: .env  README.md  index.js  package.json
02.LangGraph/: README.md  package.json  tsconfig.json
02.LangGraph/src/: index.ts  index2.ts
03.LangGraph-AgenticRAG/: .env  .env.example  .gitignore  README.md  TUTORIAL.md  package-lock.json  package.json
03.LangGraph-AgenticRAG/src/: index.ts
04.1.EmbeddingModel/: .env  EMBEDDING.md  package.json
04.1.EmbeddingModel/sample/: king.js
04.1.LangGraph-AgenticRAG/: TUTORIAL.md  package-lock.json
04.1.LangGraph-AgenticRAG/src/: index.ts
04.2.LangGraph-AgenticRAG/: .env  GEMINI.md  package-lock.json  package.json
04.EmbeddingModel/: EMBEDDING.md  README.md  king.json  koreanKing.json  package-lock.json  package.json
05.LangGraph-From-Python/: README.md  hello.py  main.py  pyproject.toml
06.Streamlit/: README.md  pyproject.toml
07.Matzip-Agent-Python/: .gitignore  README.md  app.py  main.py  pyproject.toml
07.Matzip-Agent-Python/agent/: edge.py  graph.py  retriever.py  state.py  tool.py
07.Matzip-Agent-Python/app_utils/: location.py  weather.py
07.Matzip-Agent-Python/chroma_db/: chroma.sqlite3
07.Matzip-Agent-Python/chroma_db_qwen/: chroma.sqlite3
07.Matzip-Agent-Python/chroma_db_upstage/: chroma.sqlite3
07.Matzip-Agent-Python/docs/: jamsil-lunch-prd.md
07.Matzip-Agent-Python/store/: embedding.py  embedding_qwen.py  embedding_upstage.py  emebedding.py  test.py  test_qwen.py  test_upstage.py
(+11 files in other folders)
